# Escrow

./: .gitignore  README.md  angular.json  docker-compose.yml  package-lock.json  package.json
app-backend/: Dockerfile  pyproject.toml
app-backend/apps/users/: admin.py  api.py  managers.py  models.py  selectors.py  send_email.py  serializers.py  services.py  urls.py
app-backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_is_superuser.py  0003_alter_user_username.py  0004_remove_user_username.py  0005_user_address_user_age_user_city_user_country_and_more.py  0006_remove_user_identification_date_and_more.py  0007_directory_file.py  0008_file_file.py  0009_directory_path_alter_file_file.py  0010_remove_file_s3_url.py  0011_remove_directory_path.py  0012_directory_path.py  0013_message.py  0014_user_balance_cny_user_balance_eur_user_balance_usd_and_more.py  0015_directory_status.py
app-backend/backend/: settings.py  urls.py
client/: .gitignore  Dockerfile  README.md  angular.json  vercel.json
client/src/: index.html  styles.scss
client/src/app/: app.module.ts
client/src/app/landing-page/: landing-page-routing.module.ts  (+1 more)
client/src/environments/: environment.ts
nginx/: nginx.conf
src/: index.html  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/app/landing-page/: landing-page-routing.module.ts  landing-page.module.ts
src/app/personal-cabinet/: personal-cabinet-routing.module.ts  personal-cabinet.module.ts
src/environments/: environment.ts
(+184 files in other folders)
