[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["koshkaj <dkoshkeli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
django-redis = "^5.4.0"
boto3 = "^1.28.59"
django-storages = "^1.14.1"
drf-yasg = {extras = ["validation"], version = "^1.21.7"}
django-cors-headers = "^4.2.0"
mailersend = "^0.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
